fix [#31205] Loop cut don't slide when hidden faces between